<resources>
    <string name="app_name">BlackJack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hit">hit</string>
    <string name="endscards">endsCards</string>
    <string name="stand">stand</string>
    <string name="bet">Bet</string>
    <string name="player">Player</string>
    <string name="dealer">Dealer</string>
    <string name="button">Button</string>
    <string name="help">help</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string>
</resources>
