<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainZone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitId"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill_horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/endsCards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="endsCards"
                    android:textAlignment="viewStart" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">

                </View>

                <Button
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="help" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/dealerCS"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="bottom"
                    android:text="@string/dealer"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.098"
                    tools:ignore="SmallSp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="center"
                android:padding="3dp"
                android:paddingBottom="10dp">

                <HorizontalScrollView
                    android:id="@+id/dealerZoneView"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.168">

                    <LinearLayout
                        android:id="@+id/dealerZone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center"
                android:padding="3dp">

                <LinearLayout
                    android:id="@+id/resultView"
                    android:layout_width="wrap_content"
                    android:layout_height="83dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/handZoneView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dealerZoneView">

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/resultViewBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/nextGame"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="next"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/backTop1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="top"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="center"
                android:padding="3dp"
                android:paddingTop="10dp">

                <HorizontalScrollView
                    android:id="@+id/handZoneView"
                    android:layout_width="200dp"
                    android:layout_height="75dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.637">

                    <LinearLayout
                        android:id="@+id/handZone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/playerCS"
                        android:layout_width="5dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:text="@string/player"
                        android:textAlignment="viewStart"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.186"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.645"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/bet"
                        android:layout_width="11dp"
                        android:layout_height="25dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="bet:0"
                        android:textAlignment="viewStart"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.543"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.643"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/ownChip"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:text="chip"
                        android:textAlignment="viewStart"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.186"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.645"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:gravity="top|center"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/hit"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/hit"
                        app:layout_constraintBottom_toBottomOf="@+id/stand"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.162"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/stand"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/stand"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/stand"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.789"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.857" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                tools:layout_editor_absoluteX="10dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </FrameLayout>
            </TableRow>

        </TableLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/socView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b43b3b3b"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="short of cash"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/backTop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TOP" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/capZone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="なんかいい感じの説明"
                android:textAlignment="center" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/caption00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/backGame1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back" />
        </LinearLayout>
    </FrameLayout>


</android.support.constraint.ConstraintLayout>